<resources>
    <string name="app_name">ServiciosLSM</string>
    <string name="txt_mCerrarSesion">Cerrar Sesion</string>
    <string name="texto_title_login">Ingresa tus credenciales</string>
    <string name="title_register">REGISTRATE</string>
    <string name="title_email">INGRESA TU CORREO</string>
    <string name="title_password">INGRESA TU CONTRASEÑA</string>
    <string name="texto_rbInterprete">CUENTA INTERPRETE</string>
    <string name="texto_rbSordo">CUENTA SORDO</string>
    <string name="title_tvFoto">FOTO DE PERFIL</string>
    <string name="texto_btnEntrar">ENTRAR</string>
    <string name="texto_btnRegistrase">REGISTRARSE</string>
    <string name="texto_tvNombrePerfil">Nombre Interprete</string>
    <string name="texto_btnVerPerfil">Ver Perfil</string>
    <string name="texto_tvCrearServicio">Crear Servicio</string>
    <string name="texto_tvAñosExperiencia">Años experiencia LSM</string>
    <string name="texto_etAreaEspecialidad">AREA ESPECIALIDAD</string>
    <string name="texto_etNombre">INGRESA TU NOMBRE</string>
    <string name="texto_etCorreo">INGRESA TU CORREO</string>
    <string name="texto_etContraseña">INGRESA TU CONTRASEÑA</string>
    <string name="texto_etCiudad">INGRESA TU CIUDAD</string>
    <string name="texto_btnInsertarFoto">insertar foto</string>
    <string name="txt_btnInsertarVideo">Insertar Video</string>
    <string name="texto_btnCrearCuenta">CREAR CUENTA</string>
    <string name="texto_etTelefono">TELEFONO</string>
    <string name="texto_btnCrearServicio">Crear Servicio</string>
    <string name="texto_toast_login">BIENVENIDO</string>
    <string name="txt_progressdialog_login">Iniciando sesion...</string>
    <string name="txt_btnIrLogin">INICIAR SESION</string>
    <string name="txt_btnSiguiente">SIGUIENTE</string>
    <string name="txt_continuar">CONTINUAR</string>
    <string name="txt_mCrearServicio">CREAR SERVICIO</string>
    <string name="txt_mEditarServicio">EDITAR SERVICIO</string>
    <string name="txt_mVerValoraciones">VER VALORACIONES</string>
    <string name="txt_tvInterpretesDestacados">Interpretes Destacados</string>
    <string name="txt_etNombreC">NOMBRE COMPLETO</string>
    <string name="txt_tvCvCiudad">Ciudad</string>
    <string name="txt_tvCvCorreo">Correo</string>
    <string name="txt_tvSeleccionaFoto">Selecciona tu foto de perfil</string>
    <string name="txt_tvAñosExp">Años experiencia</string>
    <string name="txt_etAreaEspecialidad">Area especialidad</string>
    <string name="txt_tvTelefono">Telefono</string>
    <string name="txt_tvValoracion">Valoracion</string>
    <string name="txt_tvVideoSordo">Insertar video del porque lo evaluo de dicha forma y comentarios</string>
    <string name="txt_btnCalificar">Enviar</string>
    <string name="txt_btnEditarServicio">Editar Servicio</string>
    <string name="txt_tvValoraciones">Valoraciones</string>
</resources>