<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".CrearServicio">

    <include android:id="@+id/miToolbar"
        layout="@layout/toolbar"
        >
    </include>

    <TextView
        android:id="@+id/tvCrearServicio"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FD511A"
        android:text="@string/texto_tvCrearServicio"
        android:textSize="24dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:letterSpacing=".04"
        android:textAllCaps="true"
        android:layout_marginTop="15dp"
        android:layout_below="@id/miToolbar" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:layout_below="@id/tvCrearServicio"
        >

        <TextView
            android:id="@+id/tvAñosExperiencia"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_below="@id/miToolbar"
            android:letterSpacing="0.1"
            android:text="@string/texto_tvAñosExperiencia"
            android:textAllCaps="true"
            android:textColor="@color/blacktxt"
            android:textSize="@dimen/sizeTxt"
            android:layout_marginLeft="24dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etnAñosExperiencia"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/heigthInputs"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="24dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:ems="10"
            android:inputType="number"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    </LinearLayout>

    <EditText
        android:id="@+id/etAreaEspecialidad"
        android:layout_width="@dimen/widthInputs"
        android:layout_height="@dimen/heigthInputs"
        android:background="@color/white"
        android:layout_gravity="center"
        android:hint="@string/texto_etAreaEspecialidad"
        android:paddingLeft="10dp"
        />

    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="@dimen/widthInputs"
        android:layout_height="@dimen/heigthInputs"
        android:background="@color/white"
        android:layout_gravity="center"
        android:hint="@string/texto_etTelefono"
        android:paddingLeft="10dp"
        android:inputType="phone"
        android:layout_marginTop="30dp"
        />

    <Button
        android:id="@+id/btnInsertarVideo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/heigthButtons"
        android:text="@string/texto_btnInsertarFoto"
        android:drawableEnd="@drawable/ic_video"
        android:theme="@style/RaisedButton"
        android:textStyle="bold"
        android:textSize="16dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/btnCrearCuenta"
        android:layout_width="@dimen/widthButtons"
        android:layout_height="@dimen/heigthButtons"
        android:theme="@style/RaisedButton"
        android:layout_gravity="center"
        android:text="@string/texto_btnCrearServicio"
        android:fontFamily="sans-serif"
        android:letterSpacing="0.2"
        android:textSize="@dimen/sizeTextButtons"
        android:backgroundTint="@color/green"
        android:layout_marginTop="20dp"
        />


</LinearLayout>